5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1649_1053.log
== TEST (2019-04-11 19:12:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
input("nome do patrono:")
-- OUTPUT:
11.2482865705094
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=cervo):
	msg = cervo eh patrono do harry potter.
else:
	msg = nao eh patrono do harry potter
	print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=cervo):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
	print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=cervo):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
	print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=cervo):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
	print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:14:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=cervo):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
	print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono = "cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
	print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono = "cervo"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono = "cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono = "cervo"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono="cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono="cervo"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono="cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
print(msg)
-- ERROR:
File "XXXX", line 5
    if (patrono="cervo"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=="cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
print(msg)
-- ERROR:
File "XXXX", line 6
    msg = cervo_eh_patrono_do_harry_potter.
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono=="cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
print(msg)
-- ERROR:
File "XXXX", line 6
    msg = cervo_eh_patrono_do_harry_potter.
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = cervo_eh_patrono_do_harry_potter.
else:
	msg = nao_eh_patrono_do_harry_potter
print(msg)
-- ERROR:
File "XXXX", line 6
    msg = cervo_eh_patrono_do_harry_potter.
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = cervo eh patrono do harry potter.
else:
	msg = nao eh patrono do harry otter
print(msg)
-- ERROR:
File "XXXX", line 6
    msg = cervo eh patrono do harry potter.
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = cervo eh patrono do harry potter.
else:
	msg = patrono nao eh patrono do harry otter
print(msg)
-- ERROR:
File "XXXX", line 6
    msg = cervo eh patrono do harry potter.
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono nao eh patrono do harry otter
print(msg)
-- ERROR:
File "XXXX", line 8
    msg = patrono nao eh patrono do harry otter
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = "patrono nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = "patrono nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:18:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = "patrono nao eh patrono do harry potter"
print(msg)
-- EXECUTION TIME:
0.129514
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
patrono nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = "patrono nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:19:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono "nao eh patrono do harry potter"
print(msg)
-- ERROR:
File "XXXX", line 8
    msg = patrono "nao eh patrono do harry potter"
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:19:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono+"nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:19:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono + "nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:19:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono + "nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono + "nao eh patrono do harry potter"
print(msg)
-- EXECUTION TIME:
0.190555
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:20:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono + "nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:20:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono"nao eh patrono do harry potter"
print(msg)
-- ERROR:
File "XXXX", line 8
    msg = patrono"nao eh patrono do harry potter"
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:20:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = patrono "nao eh patrono do harry potter"
print(msg)
-- ERROR:
File "XXXX", line 8
    msg = patrono "nao eh patrono do harry potter"
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:20:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = a "nao eh patrono do harry potter"
print(msg)
-- ERROR:
File "XXXX", line 8
    msg = a "nao eh patrono do harry potter"
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:21:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (patrono == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = a+ "nao eh patrono do harry potter"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono == "cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:21:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = a+ "nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:21:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = a+ "nao eh patrono do harry potter"
print(msg)
-- EXECUTION TIME:
0.179179
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:21:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg = a+ "nao eh patrono do harry potter"
print(msg)
-- OUTPUT:
cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:22:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	msg = "cervo eh patrono do harry potter."
else:
	msg =  "nao eh patrono do harry potter"
print(a+msg)
-- OUTPUT:
cervocervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:22:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	msg = " cervo eh patrono do harry potter."
else:
	msg =  " nao eh patrono do harry potter"
print(a+msg)
-- OUTPUT:
cervo cervo eh patrono do harry potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:22:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	msg = " cervo eh patrono do harry potter."
else:
	msg =  " nao eh patrono do harry potter"
print(a+msg)
-- EXECUTION TIME:
0.126074
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do harry potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:23:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " cervo eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:23:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " cervo eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- EXECUTION TIME:
0.173897
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " cervo eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:24:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " cervo eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- EXECUTION TIME:
0.141226
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " cervo eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:24:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- EXECUTION TIME:
0.312585
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:24:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " eh patrono do Harry Potter."
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- EXECUTION TIME:
0.146878
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:25:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " eh patrono do Harry Potter"
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:25:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if ( a == "cervo"):
	msg = " eh patrono do Harry Potter"
else:
	msg =  " nao eh patrono do Harry Potter"
print(a+msg)
-- EXECUTION TIME:
0.148239
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
